tests/errors/_questions/generated_errors/after_dot_must_be_ident/return_in_struct.c
struct id
{
	char lastname[20];   
	char firstname[20]; 
	int year;
};


int main()
{
	struct id structura;
	structura.return; // возникает слишком много посторонних ошибок
	//} // нужно, чтобы избавиться от ошибки первичное не может начинаться с лексемы 120
	//пр // после }  и этого будет ошибка  нет такого поля пр в структуре
	//year; // после }  и этого будет бесконечно требовать ;
	
	return 0;
}